--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "typescript": "^4.6.0",
     "web-vitals": "^2.1.0"
   },
